--- a/sass/main.sass
+++ b/sass/main.sass
@@ -5,7 +5,12 @@
 // 2. Vendor
 @import "vendor/normalize"
 // 3.Base styles
-
+@import "base/base"
+@import "base/typography"
 // 4.Layout
-
+@import "layout/grid"
+@import "layout/header"
+@import "layout/hero"
+@import "layout/home-about"
 // 5. Components
+@import "components/buttons"
