--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,7 @@
 /* Document
    ========================================================================== */
 @import url("https://fonts.googleapis.com/css?family=Amatic+SC:400,700");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400");
 html {
   font-family: sans-serif;
   /* 1 */
@@ -406,3 +407,105 @@ template {
  */
 [hidden] {
   display: none; }
+
+*, *::before, *::after {
+  border-sizing: borderbox; }
+
+body {
+  text-align: center; }
+
+img {
+  max-width: 100%;
+  height: auto; }
+
+.container {
+  width: 95%;
+  margin: 0 auto;
+  text-align: center; }
+
+.unstyled-list {
+  margin: 0;
+  padding: 0;
+  list-style: none; }
+
+.usmain {
+  display: none; }
+
+h1, h2, h3, h4, h5, h6, p {
+  margin: 0 0 .75em; }
+
+h1:last-child, h1:last-child, h2:last-child, h3:last-child, h4:last-child, h5:last-child, h6:last-child, p:last-child {
+  margin: 0; }
+
+p.light {
+  font-family: "Open Sans";
+  font-size: 1.125rem;
+  line-height: 1.45; }
+
+p.dark {
+  color: #333333;
+  font-size: 1rem;
+  line-height: 25.6px;
+  font-family: Open Sans; }
+
+.grid {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap; }
+
+.col {
+  -webkit-flex: 0 0 100%;
+  -ms-flex: 0 0 100%;
+  flex: 0 0 100%; }
+
+.main-header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0; }
+
+.hero {
+  background-image: url("../img/slide1.jpg");
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: #ffffff;
+  padding-bottom: 8em;
+  padding-top: 8em;
+  text-align: center; }
+
+.hero-text {
+  text-align: center; }
+
+.about {
+  padding: 10vh 0; }
+
+.btn {
+  display: inline-block;
+  padding: 1.55em 4.7em;
+  line-height: 20px;
+  font-size: 0.875rem;
+  font-weight: 500;
+  text-transform: uppercase;
+  text-decoration: none;
+  margin-bottom: 1em; }
+
+.btn--dark {
+  background-color: #000000;
+  color: #ffffff;
+  font-weight: bold; }
+  .btn--dark:hover, .btn--darkfocus {
+    background: #1a1a1a; }
+
+.btn--light {
+  background-color: #66cc66;
+  font-weight: bold;
+  color: black;
+  padding: 1.55em 3.5em;
+  line-height: 20px; }
+  .btn--light:hover, .btn--lightfocus {
+    background: #40bf40; }
