--- a/sass/abstracts/_colors.sass
+++ b/sass/abstracts/_colors.sass
@@ -3,6 +3,7 @@ $black: #000000
 $menu-headings: #cccccc
 $menu-accent: #cc9900
 $menu: #333333
+$yellow: #ffcc00
 
 $text-main: #0a0a0a
 $btn-red: #cd2122
