--- a/sass/components/_buttons.sass
+++ b/sass/components/_buttons.sass
@@ -31,3 +31,18 @@
   &:hover,
   &focus
     background: darken(#66cc66, 10%)
+
+
+#submit
+  background-color: $yellow
+  border: none
+  color: white
+  font-weight: bold
+  padding: 16px 32px
+  margin: 4px 2px
+  cursor: pointer
+  border-radius: 4px
+
+  &:hover,
+  &focus
+    background: darken($yellow, 5%)
