--- a/sass/base/_typography.sass
+++ b/sass/base/_typography.sass
@@ -3,6 +3,11 @@
 h1, h2, h3, h4, h5, h6, p
   margin: 0 0 .75em
 
+h4
+  font-size: 2.25rem
+  color: $white
+  letter-spacing: 5px
+
 h1:last-child, h1:last-child, h2:last-child, h3:last-child, h4:last-child, h5:last-child, h6:last-child, p:last-child
   margin: 0
 
@@ -11,6 +16,7 @@ p.light
   font-family: $font-paragraph
   font-size: 1.125rem
   line-height: 1.45
+  color: $white
 
 p.dark
   color: #333333
