--- a/sass/main.sass
+++ b/sass/main.sass
@@ -12,5 +12,6 @@
 @import "layout/header"
 @import "layout/hero"
 @import "layout/home-about"
+@import "layout/footer"
 // 5. Components
 @import "components/buttons"
