Styling the footer

--- a/sass/layout/_footer.sass
+++ b/sass/layout/_footer.sass
@@ -43,6 +43,6 @@ footer a
   font-family: Open Sans
   font-weight: bold
   text-transform: uppercase
-  //Put these properties when in desktop size
+  //Add these properties when in desktop size
   //  display: flex
   //  justify-content: space-around
