--- a/css/main.css
+++ b/css/main.css
@@ -438,6 +438,9 @@ img {
 h1, h2, h3, h4, h5, h6, p {
   margin: 0 0 .75em; }
 
+h1 {
+  color: #ffffff; }
+
 h4 {
   font-size: 2.25rem;
   color: #ffffff;
@@ -538,6 +541,16 @@ footer a {
   font-family: Open Sans;
   font-weight: bold;
   text-transform: uppercase; }
+
+.service-banner {
+  background-color: gray;
+  background-image: url("../img/bestservice.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: ccenter;
+  background-background-attachment: fixed;
+  padding: 25vh 0;
+  background-blend-mode: multiply; }
 
 .btn {
   display: inline-block;
