--- a/sass/main.sass
+++ b/sass/main.sass
@@ -13,5 +13,6 @@
 @import "layout/hero"
 @import "layout/home-about"
 @import "layout/footer"
+@import "layout/service"
 // 5. Components
 @import "components/buttons"
