--- a/sass/layout/_service.sass
+++ b/sass/layout/_service.sass
@@ -1,10 +1,12 @@
 .service-banner
   background:
-    color: gray
+    color: #CFD1D1
     image: url("../img/bestservice.jpg")
     repeat: no-repeat
     size: cover
-    position: ccenter
-    background-attachment: fixed
+    position: center
   padding: 25vh 0
   background-blend-mode: multiply
+  background-attachment: fixed
+  h1
+    letter-spacing: 1.5rem
