--- a/sass/main.sass
+++ b/sass/main.sass
@@ -12,7 +12,8 @@
 @import "layout/header"
 @import "layout/hero"
 @import "layout/home-about"
-@import "layout/footer"
+@import "layout/specialty"
 @import "layout/service"
+@import "layout/footer"
 // 5. Components
 @import "components/buttons"
