--- a/sass/base/_typography.sass
+++ b/sass/base/_typography.sass
@@ -5,6 +5,11 @@ h1, h2, h3, h4, h5, h6, p
 
 h1
   color: $white
+  font-size: 4.13rem
+  letter-spacing: 1.5rem
+
+h2
+  font-size: 2.57142857rem
 
 h4
   font-size: 2.25rem
