--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,8 @@ html {
   -ms-text-size-adjust: 100%;
   /* 3 */
   -webkit-text-size-adjust: 100%;
-  /* 3 */ }
+  /* 3 */
+}
 
 /* Sections
    ========================================================================== */
@@ -27,7 +28,8 @@ html {
  * Remove the margin in all browsers (opinionated).
  */
 body {
-  margin: 0; }
+  margin: 0;
+}
 
 /**
  * Add the correct display in IE 9-.
@@ -38,7 +40,8 @@ footer,
 header,
 nav,
 section {
-  display: block; }
+  display: block;
+}
 
 /**
  * Correct the font size and margin on `h1` elements within `section` and
@@ -47,13 +50,16 @@ section {
 h1 {
   font-family: "Amatic SC", cursive;
   font-size: 4.4em;
-  margin: 0.67em 0; }
+  margin: 0.67em 0;
+}
 
 h2 {
-  font-family: 'Amatic SC', cursive; }
+  font-family: 'Amatic SC', cursive;
+}
 
 h4 {
-  font-family: 'Amatic SC', cursive; }
+  font-family: 'Amatic SC', cursive;
+}
 
 /* Grouping content
    ========================================================================== */
@@ -65,13 +71,15 @@ figcaption,
 figure,
 main {
   /* 1 */
-  display: block; }
+  display: block;
+}
 
 /**
  * Add the correct margin in IE 8.
  */
 figure {
-  margin: 1em 40px; }
+  margin: 1em 40px;
+}
 
 /**
  * 1. Add the correct box sizing in Firefox.
@@ -83,7 +91,8 @@ hr {
   height: 0;
   /* 1 */
   overflow: visible;
-  /* 2 */ }
+  /* 2 */
+}
 
 /**
  * 1. Correct the inheritance and scaling of font size in all browsers.
@@ -93,7 +102,8 @@ pre {
   font-family: monospace, monospace;
   /* 1 */
   font-size: 1em;
-  /* 2 */ }
+  /* 2 */
+}
 
 /* Text-level semantics
    ========================================================================== */
@@ -105,7 +115,8 @@ a {
   background-color: transparent;
   /* 1 */
   -webkit-text-decoration-skip: objects;
-  /* 2 */ }
+  /* 2 */
+}
 
 /**
  * Remove the outline on focused links when they are also active or hovered
@@ -113,7 +124,8 @@ a {
  */
 a:active,
 a:hover {
-  outline-width: 0; }
+  outline-width: 0;
+}
 
 /**
  * 1. Remove the bottom border in Firefox 39-.
@@ -125,21 +137,24 @@ abbr[title] {
   text-decoration: underline;
   /* 2 */
   text-decoration: underline dotted;
-  /* 2 */ }
+  /* 2 */
+}
 
 /**
  * Prevent the duplicate application of `bolder` by the next rule in Safari 6.
  */
 b,
 strong {
-  font-weight: inherit; }
+  font-weight: inherit;
+}
 
 /**
  * Add the correct font weight in Chrome, Edge, and Safari.
  */
 b,
 strong {
-  font-weight: bolder; }
+  font-weight: bolder;
+}
 
 /**
  * 1. Correct the inheritance and scaling of font size in all browsers.
@@ -151,26 +166,30 @@ samp {
   font-family: monospace, monospace;
   /* 1 */
   font-size: 1em;
-  /* 2 */ }
+  /* 2 */
+}
 
 /**
  * Add the correct font style in Android 4.3-.
  */
 dfn {
-  font-style: italic; }
+  font-style: italic;
+}
 
 /**
  * Add the correct background and color in IE 9-.
  */
 mark {
   background-color: #ff0;
-  color: #000; }
+  color: #000;
+}
 
 /**
  * Add the correct font size in all browsers.
  */
 small {
-  font-size: 80%; }
+  font-size: 80%;
+}
 
 /**
  * Prevent `sub` and `sup` elements from affecting the line height in
@@ -181,13 +200,16 @@ sup {
   font-size: 75%;
   line-height: 0;
   position: relative;
-  vertical-align: baseline; }
+  vertical-align: baseline;
+}
 
 sub {
-  bottom: -0.25em; }
+  bottom: -0.25em;
+}
 
 sup {
-  top: -0.5em; }
+  top: -0.5em;
+}
 
 /* Embedded content
    ========================================================================== */
@@ -196,26 +218,30 @@ sup {
  */
 audio,
 video {
-  display: inline-block; }
+  display: inline-block;
+}
 
 /**
  * Add the correct display in iOS 4-7.
  */
 audio:not([controls]) {
   display: none;
-  height: 0; }
+  height: 0;
+}
 
 /**
  * Remove the border on images inside links in IE 10-.
  */
 img {
-  border-style: none; }
+  border-style: none;
+}
 
 /**
  * Hide the overflow in IE.
  */
 svg:not(:root) {
-  overflow: hidden; }
+  overflow: hidden;
+}
 
 /* Forms
    ========================================================================== */
@@ -235,7 +261,8 @@ textarea {
   line-height: 1.15;
   /* 1 */
   margin: 0;
-  /* 2 */ }
+  /* 2 */
+}
 
 /**
  * Show the overflow in IE.
@@ -244,7 +271,8 @@ textarea {
 button,
 input {
   /* 1 */
-  overflow: visible; }
+  overflow: visible;
+}
 
 /**
  * Remove the inheritance of text transform in Edge, Firefox, and IE.
@@ -253,7 +281,8 @@ input {
 button,
 select {
   /* 1 */
-  text-transform: none; }
+  text-transform: none;
+}
 
 /**
  * 1. Prevent a WebKit bug where (2) destroys native `audio` and `video`
@@ -265,7 +294,8 @@ html [type="button"],
 [type="reset"],
 [type="submit"] {
   -webkit-appearance: button;
-  /* 2 */ }
+  /* 2 */
+}
 
 /**
  * Remove the inner border and padding in Firefox.
@@ -275,7 +305,8 @@ button::-moz-focus-inner,
 [type="reset"]::-moz-focus-inner,
 [type="submit"]::-moz-focus-inner {
   border-style: none;
-  padding: 0; }
+  padding: 0;
+}
 
 /**
  * Restore the focus styles unset by the previous rule.
@@ -284,7 +315,8 @@ button:-moz-focusring,
 [type="button"]:-moz-focusring,
 [type="reset"]:-moz-focusring,
 [type="submit"]:-moz-focusring {
-  outline: 1px dotted ButtonText; }
+  outline: 1px dotted ButtonText;
+}
 
 /**
  * Change the border, margin, and padding in all browsers (opinionated).
@@ -292,7 +324,8 @@ button:-moz-focusring,
 fieldset {
   border: 1px solid #c0c0c0;
   margin: 0 2px;
-  padding: 0.35em 0.625em 0.75em; }
+  padding: 0.35em 0.625em 0.75em;
+}
 
 /**
  * 1. Correct the text wrapping in Edge and IE.
@@ -312,7 +345,8 @@ legend {
   padding: 0;
   /* 3 */
   white-space: normal;
-  /* 1 */ }
+  /* 1 */
+}
 
 /**
  * 1. Add the correct display in IE 9-.
@@ -322,13 +356,15 @@ progress {
   display: inline-block;
   /* 1 */
   vertical-align: baseline;
-  /* 2 */ }
+  /* 2 */
+}
 
 /**
  * Remove the default vertical scrollbar in IE.
  */
 textarea {
-  overflow: auto; }
+  overflow: auto;
+}
 
 /**
  * 1. Add the correct box sizing in IE 10-.
@@ -339,14 +375,16 @@ textarea {
   box-sizing: border-box;
   /* 1 */
   padding: 0;
-  /* 2 */ }
+  /* 2 */
+}
 
 /**
  * Correct the cursor style of increment and decrement buttons in Chrome.
  */
 [type="number"]::-webkit-inner-spin-button,
 [type="number"]::-webkit-outer-spin-button {
-  height: auto; }
+  height: auto;
+}
 
 /**
  * 1. Correct the odd appearance in Chrome and Safari.
@@ -356,14 +394,16 @@ textarea {
   -webkit-appearance: textfield;
   /* 1 */
   outline-offset: -2px;
-  /* 2 */ }
+  /* 2 */
+}
 
 /**
  * Remove the inner padding and cancel buttons in Chrome and Safari on macOS.
  */
 [type="search"]::-webkit-search-cancel-button,
 [type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none; }
+  -webkit-appearance: none;
+}
 
 /**
  * 1. Correct the inability to style clickable types in iOS and Safari.
@@ -373,7 +413,8 @@ textarea {
   -webkit-appearance: button;
   /* 1 */
   font: inherit;
-  /* 2 */ }
+  /* 2 */
+}
 
 /* Interactive
    ========================================================================== */
@@ -383,13 +424,15 @@ textarea {
  */
 details,
 menu {
-  display: block; }
+  display: block;
+}
 
 /*
  * Add the correct display in all browsers.
  */
 summary {
-  display: list-item; }
+  display: list-item;
+}
 
 /* Scripting
    ========================================================================== */
@@ -397,13 +440,15 @@ summary {
  * Add the correct display in IE 9-.
  */
 canvas {
-  display: inline-block; }
+  display: inline-block;
+}
 
 /**
  * Add the correct display in IE.
  */
 template {
-  display: none; }
+  display: none;
+}
 
 /* Hidden
    ========================================================================== */
@@ -411,61 +456,74 @@ template {
  * Add the correct display in IE 10-.
  */
 [hidden] {
-  display: none; }
+  display: none;
+}
 
 *, *::before, *::after {
-  border-sizing: borderbox; }
+  border-sizing: borderbox;
+}
 
 body {
-  text-align: center; }
+  text-align: center;
+}
 
 img {
   max-width: 100%;
-  height: auto; }
+  height: auto;
+}
 
 .container {
   width: 95%;
   margin: 0 auto;
-  text-align: center; }
+  text-align: center;
+}
 
 .unstyled-list {
   margin: 0;
   padding: 0;
-  list-style: none; }
+  list-style: none;
+}
 
 .usmain {
-  display: none; }
+  display: none;
+}
 
 h1, h2, h3, h4, h5, h6, p {
-  margin: 0 0 .75em; }
+  margin: 0 0 .75em;
+}
 
 h1 {
   color: #ffffff;
   font-size: 4.13rem;
-  letter-spacing: 1.5rem; }
+}
 
 h2 {
-  font-size: 2.57142857rem; }
+  font-size: 2.57142857rem;
+}
 
 h4 {
   font-size: 2.25rem;
   color: #ffffff;
-  letter-spacing: 5px; }
+  letter-spacing: 5px;
+}
 
 h1:last-child, h1:last-child, h2:last-child, h3:last-child, h4:last-child, h5:last-child, h6:last-child, p:last-child {
-  margin: 0; }
+  margin: 0;
+}
 
 p.light {
   font-family: "Open Sans";
   font-size: 1.125rem;
   line-height: 1.45;
-  color: #ffffff; }
+  color: #ffffff;
+}
 
 p.dark {
   color: #333333;
   font-size: 1rem;
   line-height: 25.6px;
-  font-family: Open Sans; }
+  font-family: Open Sans;
+}
 
 .grid {
   display: -webkit-flex;
@@ -473,18 +531,21 @@ p.dark {
   display: flex;
   -webkit-flex-wrap: wrap;
   -ms-flex-wrap: wrap;
-  flex-wrap: wrap; }
+  flex-wrap: wrap;
+}
 
 .col {
   -webkit-flex: 0 0 100%;
   -ms-flex: 0 0 100%;
-  flex: 0 0 100%; }
+  flex: 0 0 100%;
+}
 
 .main-header {
   position: absolute;
   top: 0;
   left: 0;
-  right: 0; }
+  right: 0;
+}
 
 .hero {
   background-image: url("../img/slide1.jpg");
@@ -495,20 +556,24 @@ p.dark {
   color: #ffffff;
   padding-bottom: 8em;
   padding-top: 8em;
-  text-align: center; }
+  text-align: center;
+}
 
 .hero-text {
-  text-align: center; }
+  text-align: center;
+}
 
 .about {
-  padding: 10vh 0; }
+  padding: 10vh 0;
+}
 
 .todays-specialty {
   background-image: url("../img/section2.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
-  padding: 25vh 0; }
+  padding: 25vh 0;
+}
 
 .service-banner {
   background-color: #CFD1D1;
@@ -518,33 +583,42 @@ p.dark {
   background-position: center;
   padding: 25vh 0;
   background-blend-mode: multiply;
-  background-attachment: fixed; }
+  background-attachment: fixed;
+}
 
 footer {
   padding: 10vh 0;
-  background-color: #0a0a0a; }
+  background-color: #0a0a0a;
+}
 
 input {
   width: 90%;
   height: 40px;
   border: 2px solid gray;
   background-color: #000000;
-  margin-bottom: 10px; }
-  input:focus {
-    border: 2px solid #ffffff;
-    outline-width: 0; }
+  margin-bottom: 10px;
+}
+
+input:focus {
+  border: 2px solid #ffffff;
+  outline-width: 0;
+}
 
 ::-webkit-input-placeholder {
   font-size: 14px;
   text-align: center;
   font-weight: bold;
-  font-family: Open Sans; }
+  font-family: Open Sans;
+}
 
 footer a {
   color: #666666;
-  text-decoration: none; }
-  footer a:hover, footer afocus {
-    color: #333333; }
+  text-decoration: none;
+}
+
+footer a:hover, footer afocus {
+  color: #333333;
+}
 
 .social-links {
   font-size: 1.5rem;
@@ -554,7 +628,8 @@ footer a {
   -webkit-justify-content: space-around;
   -ms-flex-pack: distribute;
   justify-content: space-around;
-  margin: 25px 0; }
+  margin: 25px 0;
+}
 
 .nav-footer {
   width: 70%;
@@ -563,7 +638,8 @@ footer a {
   font-size: 1rem;
   font-family: Open Sans;
   font-weight: bold;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+}
 
 .btn {
   display: inline-block;
@@ -573,23 +649,30 @@ footer a {
   font-weight: 500;
   text-transform: uppercase;
   text-decoration: none;
-  margin-bottom: 1em; }
+  margin-bottom: 1em;
+}
 
 .btn--dark {
   background-color: #000000;
   color: #ffffff;
-  font-weight: bold; }
-  .btn--dark:hover, .btn--darkfocus {
-    background: #1a1a1a; }
+  font-weight: bold;
+}
+
+.btn--dark:hover, .btn--darkfocus {
+  background: #1a1a1a;
+}
 
 .btn--light {
   background-color: #66cc66;
   font-weight: bold;
   color: black;
   padding: 1.55em 3.5em;
-  line-height: 20px; }
-  .btn--light:hover, .btn--lightfocus {
-    background: #40bf40; }
+  line-height: 20px;
+}
+
+.btn--light:hover, .btn--lightfocus {
+  background: #40bf40;
+}
 
 #submit {
   background-color: #ffcc00;
@@ -599,6 +682,9 @@ footer a {
   padding: 16px 32px;
   margin: 4px 2px;
   cursor: pointer;
-  border-radius: 4px; }
-  #submit:hover, #submitfocus {
-    background: #e6b800; }
+  border-radius: 4px;
+}
+
+#submit:hover, #submitfocus {
+  background: #e6b800;
+}
