--- a/sass/main.sass
+++ b/sass/main.sass
@@ -13,6 +13,8 @@
 @import "layout/hero"
 @import "layout/home-about"
 @import "layout/specialty"
+@import "layout/menu"
+@import "layout/delivery"
 @import "layout/service"
 @import "layout/footer"
 // 5. Components
