--- a/css/main.css
+++ b/css/main.css
@@ -541,11 +541,31 @@ p.dark {
   flex: 0 0 100%;
 }
 
+.col--full {
+  -webkit-flex: 0 0 100%;
+  -ms-flex: 0 0 100%;
+  flex: 0 0 100%;
+}
+
 @media (min-width: 800px) {
   .col--1-3 {
     -webkit-flex-basis: 33.3333%;
     -ms-flex-preferred-size: 33.3333%;
     flex-basis: 33.3333%;
+  }
+}
+
+@media (min-width: 880px) {
+  .col--1-2 {
+    -webkit-flex-basis: 50%;
+    -ms-flex-preferred-size: 50%;
+    flex-basis: 50%;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
   }
 }
 
@@ -576,12 +596,54 @@ p.dark {
   padding: 10vh 0;
 }
 
+@media (min-width: 700px) {
+  .about {
+    padding: 0;
+  }
+  .about h2 {
+    margin-top: 1rem;
+  }
+}
+
+@media (min-width: 995px) {
+  .about {
+    padding: 0;
+  }
+  .about h2 {
+    margin-top: 1rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .about h2 {
+    margin-top: 5rem;
+  }
+}
+
+@media (min-width: 1200px) and (min-width: 1400px) {
+  .about h2 {
+    margin-top: 7rem;
+  }
+}
+
+@media (min-width: 1200px) and (min-width: 1400px) and (min-width: 1800px) {
+  .about h2 {
+    margin-top: 11rem;
+  }
+}
+
 .todays-specialty {
   background-image: url("../img/section2.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
   padding: 25vh 0;
+}
+
+@media (min-width: 880px) {
+  .todays-specialty {
+    margin-top: -4px;
+  }
 }
 
 .menu {
