--- a/sass/layout/_grid.sass
+++ b/sass/layout/_grid.sass
@@ -5,6 +5,15 @@
 .col
   flex: 0 0 100%
 
+.col--full
+  flex: 0 0 100%
+
 @media(min-width : 800px)
   .col--1-3
     flex-basis: 33.3333%
+
+@media(min-width : 880px)
+  .col--1-2
+    flex-basis: 50%
+    align-items: center
+    justify-content: center
