--- a/sass/layout/_home-about.sass
+++ b/sass/layout/_home-about.sass
@@ -1,2 +1,32 @@
 .about
-  padding: 10vh 0
+    padding: 10vh 0
+
+@media(min-width : 700px)
+    .about
+      padding: 0
+      h2
+        margin-top: 1rem
+
+@media(min-width : 995px)
+    .about
+      padding: 0
+      h2
+        margin-top: 1rem
+
+
+@media(min-width : 1200px)
+  .about
+    h2
+      margin-top: 5rem
+
+
+  @media(min-width : 1400px)
+    .about
+      h2
+        margin-top: 7rem
+
+
+    @media(min-width : 1800px)
+      .about
+        h2
+          margin-top: 11rem
