--- a/sass/layout/_home-about.sass
+++ b/sass/layout/_home-about.sass
@@ -7,26 +7,14 @@
       h2
         margin-top: 1rem
 
+
+
 @media(min-width : 995px)
-    .about
-      padding: 0
-      h2
-        margin-top: 1rem
-
-
-@media(min-width : 1200px)
   .about
     h2
-      margin-top: 5rem
+      margin-top: 6vmax
 
-
-  @media(min-width : 1400px)
-    .about
-      h2
-        margin-top: 7rem
-
-
-    @media(min-width : 1800px)
-      .about
-        h2
-          margin-top: 11rem
+@media(min-width : 1580px)
+  .about
+    h2
+      margin-top: 9vmax
