--- a/css/main.css
+++ b/css/main.css
@@ -606,29 +606,14 @@ p.dark {
 }
 
 @media (min-width: 995px) {
-  .about {
-    padding: 0;
-  }
   .about h2 {
-    margin-top: 1rem;
+    margin-top: 6vmax;
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 1580px) {
   .about h2 {
-    margin-top: 5rem;
-  }
-}
-
-@media (min-width: 1200px) and (min-width: 1400px) {
-  .about h2 {
-    margin-top: 7rem;
-  }
-}
-
-@media (min-width: 1200px) and (min-width: 1400px) and (min-width: 1800px) {
-  .about h2 {
-    margin-top: 11rem;
+    margin-top: 9vmax;
   }
 }
 
@@ -677,6 +662,12 @@ p.dark {
 
 .delivery {
   padding: 10vh 0;
+}
+
+@media (min-width: 1390px) {
+  .delivery h2 {
+    margin-top: 6vmax;
+  }
 }
 
 .service-banner {
