Footer media queries

--- a/sass/base/_base.sass
+++ b/sass/base/_base.sass
@@ -13,6 +13,13 @@ img
   margin: 0 auto
   text-align: center
 
+.container--footer
+  max-width: 50em
+
+@media(min-width : 720px)
+  .container--footer--icons
+    max-width: 25em
+
 .unstyled-list
   margin: 0
   padding: 0
