--- a/css/main.css
+++ b/css/main.css
@@ -478,6 +478,16 @@ img {
   text-align: center;
 }
 
+.container--footer {
+  max-width: 50em;
+}
+
+@media (min-width: 720px) {
+  .container--footer--icons {
+    max-width: 25em;
+  }
+}
+
 .unstyled-list {
   margin: 0;
   padding: 0;
@@ -734,6 +744,17 @@ footer a:hover, footer afocus {
   font-family: Open Sans;
   font-weight: bold;
   text-transform: uppercase;
+}
+
+@media (min-width: 720px) {
+  .nav-footer {
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-justify-content: space-around;
+    -ms-flex-pack: distribute;
+    justify-content: space-around;
+  }
 }
 
 .btn {
