--- a/sass/layout/_footer.sass
+++ b/sass/layout/_footer.sass
@@ -46,3 +46,8 @@ footer a
   //Add these properties when in desktop size
   //  display: flex
   //  justify-content: space-around
+
+@media(min-width : 720px)
+  .nav-footer
+    display: flex
+    justify-content: space-around
