--- a/sass/main.sass
+++ b/sass/main.sass
@@ -9,6 +9,7 @@
 @import "base/typography"
 // 4.Layout
 @import "layout/grid"
+@import "layout/nav"
 @import "layout/header"
 @import "layout/hero"
 @import "layout/home-about"
