--- a/sass/base/_base.sass
+++ b/sass/base/_base.sass
@@ -16,6 +16,9 @@ img
 .container--footer
   max-width: 50em
 
+.container--menu
+  max-width: 50em  
+
 @media(min-width : 720px)
   .container--footer--icons
     max-width: 25em
