--- a/sass/layout/_nav.sass
+++ b/sass/layout/_nav.sass
@@ -8,16 +8,35 @@
   overflow: hidden
   transition: all ease-in-out 250ms
 
+  @media(min-width: 725px)
+    background: none
+    position: relative
+    flex: auto
+    left: 0
+    padding: 1rem 0
+
+
   ul
     display: flex
     flex-direction: column
     justify-content: space-around
     height: 100vh
 
+    @media(min-width: 725px)
+      flex-direction: row
+      height: auto
+
   li
     flex:  1 1 auto
     border-bottom: 1px solid rgba(0, 0, 0, .15)
     display: flex
+    @media(min-width: 725px)
+      display: inline-block
+      border: none
+      text-transform: uppercase
+      font-family: Open Sans
+      font-weight: bolder
+      font-size: .8rem
 
   a
     color: $white
@@ -26,9 +45,15 @@
     flex-basis: 100%
     align-items: center
     justify-content: center
+    @media(min-width: 725px)
+      display: inline
 
     &:hover,
       background: rgba(0, 0, 0, .10)
+      @media(min-width: 725px)
+        background: none
+        color: tomato
+        flex-basis: auto
 
   &.is-open
     left: 0
@@ -42,6 +67,8 @@
   right: 1em
   top: 1em
   cursor: pointer
+  @media(min-width: 725px)
+    display: none
 
 .hamburguer, .hamburguer::before, .hamburguer::after
   content: ' '
