--- a/sass/abstracts/_colors.sass
+++ b/sass/abstracts/_colors.sass
@@ -5,6 +5,7 @@ $menu-accent: #cc9900
 $menu: #333333
 $menu-bg: #efefef
 $yellow: #ffcc00
+$green: #66cc66
 
 $text-main: #0a0a0a
 $btn-red: #cd2122
