--- a/sass/components/_buttons.sass
+++ b/sass/components/_buttons.sass
@@ -22,7 +22,7 @@
     background: lighten($black, 10%)
 
 .btn--light
-  background-color: #66cc66
+  background-color: $green
   font-weight: bold
   color: black
   padding: 1.55em 3.5em
@@ -30,7 +30,7 @@
 
   &:hover,
   &focus
-    background: darken(#66cc66, 10%)
+    background: darken($green, 10%)
 
 
 #submit
